test/types/records/init/copy/noCopyInit.good
noCopyInit.chpl:8: error: unresolved call 'R.init=(R)'
noCopyInit.chpl:2: note: this candidate did not match: R.init=(const ref other: R)
noCopyInit.chpl:2: note: because where clause evaluated to false
